# bdk-floresta

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/actions/setup-rbmt/: action.yml
.github/workflows/: audit.yml  ci.yml  commits.yml  cross.yml  integration.yml  rust.yml  sigs.yml  zizmor.yml
bdk-floresta/: Cargo.toml
bdk-floresta/src/: builder.rs  error.rs  lib.rs  updater.rs
ci/: pin-msrv.sh
contrib/: check-signatures.sh  install-cargo-rbmt.sh  prune-audit-ignores.sh  run-cargo-audit.sh
docs/: ARCHITECTURE.md  README.md  UTREEXO.md
examples/: client.rs  client_regtest.rs  client_signet.rs  example.rs  floresta_node.rs  fsm.rs  node.rs  regtest.rs  signet.rs  wallet_sync.rs
examples/block_wallet_sync/: Cargo.toml  runner.sh
examples/block_wallet_sync/src/: main.rs
examples/floresta-node/: Cargo.toml
examples/node/: Cargo.toml
examples/node/src/: main.rs
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
src/: builder.rs  error.rs  fsm.rs  lib.rs  logger.rs  node.rs  updater.rs
src/client/: error.rs  mod.rs
src/node/: builder.rs  error.rs  fsm.rs  mod.rs
