[package]
version = "0.1.0"
name = "bdk-floresta"
description = "A Floresta-powered chain-source crate for BDK"
authors = ["Luis Schwab <dev@luisschwab.net"]
repository = "https://github.com/luisschwab/bdk-floresta"
documentation = "https://docs.rs/bdk-floresta"
keywords = ["bdk", "bitcoin", "floresta", "utreexo"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85.0" # MSRV

[features]
default = ["logger"]
logger = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:time"]

[[example]]
name = "client_regtest"
required-features = ["logger"]

[[example]]
name = "client_signet"
required-features = ["logger"]

[build-dependencies]
toml = { version = "1.0" }

[dependencies]
bitcoin = { version = "0.32.8" }
bdk_wallet = { version = "3.0" }
floresta-chain = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce", features = ["flat-chainstore"] }
floresta-compact-filters = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
floresta-mempool = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
floresta-wire = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
futures = { version = "0.3.32" }
tokio = { version = "1.50", features = ["rt", "signal", "sync", "time"] }
tracing = { version = "0.1.43" }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["ansi", "env-filter", "time"], optional = true }
time = { version = "0.3.45", features = ["macros", "local-offset"], optional = true }
tokio-util = { version = "0.7.18" }

# These pins are needed for `Cargo-minimal.lock`:
lazy_static = { version = "1.5.0" } # blame: sharded-slab@v0.1.7 -> tracing-subscriber@v0.3.23
dns-lookup = { version = "2.1.1" } # blame: floresta-wire v0.5.0
bitcoin-consensus-encoding = { version = "=1.0.0-rc.3" } # blame: bitcoin-io v0.3.0 (Encodable->Encode/Decodable->Decode)

[dev-dependencies]
halfin = { version = "0.3.7" }
anyhow = { version = "1.0.75" } # v1.0.75 is needed for `anyhow::Ok()`
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
uninlined_format_args = "deny"
result_large_err = "allow"
use_self = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Allow packages of different versions in the dependency tree
[package.metadata.rbmt.lint]
allowed_duplicates = [
    "base64",
    "bitcoin_hashes",
    "bitcoin-consensus-encoding",
    "bitcoin-internals",
    "bitcoin-io",
    "getrandom",
    "hex-conservative",
    "rand",
    "rand_core",
    "rand_chacha",
    "serde_core",
    "windows-sys",
    "windows-targets",
    "windows_aarch64_gnullvm",
    "windows_aarch64_msvc",
    "windows_i686_gnu",
    "windows_i686_gnullvm",
    "windows_i686_msvc",
    "windows_x86_64_gnu",
    "windows_x86_64_gnullvm",
    "windows_x86_64_msvc",
]

[package.metadata.rbmt.toolchains]
stable = "1.95.0"
nightly = "nightly-2026-05-17"
