[package]
version = "0.1.0"
name = "bdk-floresta"
description = "A Floresta-powered chain-source crate for BDK"
authors = ["Luis Schwab <dev@luisschwab.net"]
repository = "https://github.com/luisschwab/bdk-floresta"
documentation = "https://docs.rs/bdk-floresta"
keywords = ["bdk", "bitcoin", "floresta", "utreexo"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85.0" # MSRV

[features]
default = ["logger"]
logger = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:time"]

[[example]]
name = "client_regtest"
required-features = ["logger"]

[[example]]
name = "client_signet"
required-features = ["logger"]

[build-dependencies]
toml = { version = "=1.1.2" }

[dependencies]
bitcoin = { version = "=0.32.9" }
bdk_wallet = { version = "=3.0.0" }
floresta-chain = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce", features = ["flat-chainstore"] }
floresta-compact-filters = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
floresta-mempool = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
floresta-wire = { git = "https://github.com/getfloresta/Floresta.git", rev = "55c563d29763621ff394ae1fd0f2cab02ab988ce" }
futures = { version = "=0.3.32" }
tokio = { version = "=1.52.3", features = ["rt", "signal", "sync", "time"] }
tracing = { version = "=0.1.44" }
tracing-appender = { version = "=0.2.5", optional = true }
tracing-subscriber = { version = "=0.3.23", features = ["ansi", "env-filter", "time"], optional = true }
time = { version = "=0.3.45", features = ["macros", "local-offset"], optional = true } # time >0.3.45 requires Rust 1.88.0
tokio-util = { version = "=0.7.18" }

# These pins are needed for `Cargo-minimal.lock`:
lazy_static = { version = "=1.5.0" } # blame: sharded-slab@v0.1.7 -> tracing-subscriber@v0.3.23
dns-lookup = { version = "=2.1.1" } # blame: floresta-wire 55c563
bitcoin-consensus-encoding = { version = "=1.0.0-rc.3" } # blame: bitcoin-io v0.3.0 (Encodable->Encode/Decodable->Decode)

[dev-dependencies]
halfin = { version = "=0.3.7" }
anyhow = { version = "=1.0.75" } # v1.0.75 is needed for `anyhow::Ok()`
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
uninlined_format_args = "deny"
result_large_err = "allow"
use_self = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Allow packages of different versions in the dependency tree
[package.metadata.rbmt.lint]
allowed_duplicates = [
    "base64",                     # blame: bitcoin@v0.32.8 (v0.21) vs floresta-wire@v0.5.0 -> tonic@v0.14.5 (v0.22)
    "bitcoin_hashes",             # blame: bitcoin@v0.32.8 (v0.14), floresta-wire@v0.5.0 -> bip324@v0.10.0 (v0.15), floresta-chain@v0.5.0 -> rustreexo@v0.5.0 (v0.20)
    "bitcoin-consensus-encoding", # blame: floresta-chain@v0.5.0 -> rustreexo@v0.5.0 -> bitcoin_hashes@v0.20.0 (v0.1.0) vs bitcoin-io@v0.3.0 pin (v1.0.0-rc.3)
    "bitcoin-internals",          # blame: bitcoin@v0.32.8 (v0.3), rustreexo@v0.5.0 -> bitcoin-io@v0.3.0 (v0.4), rustreexo@v0.5.0 -> bitcoin_hashes@v0.20.0 (v0.5)
    "bitcoin-io",                 # blame: bitcoin@v0.32.8 (v0.1) vs floresta-chain@v0.5.0 -> rustreexo@v0.5.0 (v0.3)
    "getrandom",                  # blame: floresta-wire@v0.5.0 -> bip324@v0.10.0 -> rand@v0.8.6 -> rand_core@v0.6.4 (v0.2) vs floresta-wire@v0.5.0 -> rand@v0.9.4 (v0.3)
    "hex-conservative",           # blame: bitcoin@v0.32.8 (v0.2), floresta-wire@v0.5.0 -> bip324@v0.10.0 -> bitcoin_hashes@v0.15.0 (v0.3), floresta-chain@v0.5.0 -> rustreexo@v0.5.0 (v1.1)
    "rand",                       # blame: floresta-wire@v0.5.0 -> bip324@v0.10.0 -> rand@v0.8.6 (v0.8) vs floresta-wire@v0.5.0 -> rand@v0.9.4 (v0.9)
    "rand_core",                  # blame: floresta-wire@v0.5.0 -> bip324@v0.10.0 -> rand@v0.8.6 -> rand_core@v0.6.4 (v0.6) vs floresta-wire@v0.5.0 -> rand@v0.9.4 -> rand_core@v0.9.5 (v0.9)
    "rand_chacha",                # blame: floresta-wire@v0.5.0 -> bip324@v0.10.0 -> rand@v0.8.6 -> rand_chacha@v0.3.1 (v0.3) vs floresta-wire@v0.5.0 -> rand@v0.9.4 -> rand_chacha@v0.9.0 (v0.9)
    "serde_core",
    "windows-sys",                # blame: floresta-wire@v0.5.0 -> ring@v0.17.14 (v0.52), dns-lookup@v2.1.1 (v0.60), tokio@v1.52.3 (v0.61)
    "windows-targets",            # blame: cascades from windows-sys versions above
    "windows_aarch64_gnullvm",    # blame: cascades from windows-targets versions above
    "windows_aarch64_msvc",       # blame: cascades from windows-targets versions above
    "windows_i686_gnu",           # blame: cascades from windows-targets versions above
    "windows_i686_gnullvm",       # blame: cascades from windows-targets versions above
    "windows_i686_msvc",          # blame: cascades from windows-targets versions above
    "windows_x86_64_gnu",         # blame: cascades from windows-targets versions above
    "windows_x86_64_gnullvm",     # blame: cascades from windows-targets versions above
    "windows_x86_64_msvc",        # blame: cascades from windows-targets versions above
]

[package.metadata.rbmt.toolchains]
stable = "1.95.0"
nightly = "nightly-2026-05-17"
