[package]
name = "block_wallet_sync"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
bitcoin = "0.32.8"
bdk_floresta = { path = "../../", default-features = false, features = ["logger"] }
bdk_wallet = "2.2.0"
tokio = { version = "1.47.1", features = ["rt"] }
tracing = "0.1.41"
